[package]
name = "neon"
version = "0.0.1"
authors = ["czapek", "Mempler"]
edition = "2018"

[dependencies]
neon_derive = { path = "../neon_derive" }
neon_io = { path = "../neon_io" }

actix-web = "2.0.0"
actix-rt = "1.0.0"
bitflags = "1.2.1"
diesel = { version = "1.4.3", features = ["mysql", "r2d2"] }
flexi_logger = "0.15.1"
lazy_static = "1.4.0"
log = "0.4.8"
num_cpus = "1.12.0"
serde = { version = "1.0.104", features = ["derive"] }
toml = "0.5.6"
